trying to make javafx work